Fixed wrong font in svg

--- a/static/global.css
+++ b/static/global.css
@@ -7,6 +7,10 @@ body {
 	overflow-x: hidden;
 }
 
+svg, img {
+	font-family: 'Asap', -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	margin: 0 0 0.5em 0;
 	font-weight: 400;
